Alterações no CSS do login

--- a/devsecops projeto/login.html
+++ b/devsecops projeto/login.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesLogin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Login</title>
+    <title>VagaXpress - Login</title>
 </head>
 <body>
     <div class="caixaLogin">
-        <h2>Login</h2>
+        <h1>Login</h1>
         <div class="divspec">  
         <form id="form-login">
-            <i class="fas fa-user"></i><input type="email" placeholder="Email" name="email" required> <br>
-            <i class="fa-solid fa-key"></i><input type="password" placeholder="Senha" name="senha" required> <br>
-            <button type="submit">Entrar</button>
+            <i class="fas fa-envelope" style="margin-left: 5px;"></i><input type="email" placeholder="Email" name="email" class="textoLogin" required> <br>
+            <i class="fa-solid fa-key" style="margin-left: 5px;"></i><input type="password" placeholder="Senha" name="senha" class="textoLogin"> <br>
+            <button class="botaoLogin" type="submit">Entrar</button>
         </form>
         </div>
         <script>
@@ -33,7 +33,7 @@
             }
         </script>
         <div>
-            <a href="cadastro.html">Criar uma conta!</a>
+            <text style="margin-left: 20px;">Não tem login? </text><a href="cadastro.html">Criar uma conta!</a>
         </div>
     </div>
 
