--- a/devsecops projeto/cadastro.html
+++ b/devsecops projeto/cadastro.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <link rel="stylesheet" href="stylesLogin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>VagaXpress - Cadastro</title>
 </head>
 <body>
-
-    <div>
+    <div class="caixaLogin">
         <h2>Cadastro</h2>
         <form>
-            <input type="nome" placeholder="Nome Completo" required>
-            <input type="email" placeholder="Email" required>
-            <input type="senha" placeholder="Senha" required>
-            <button type="submit">Cadastrar</button>
+            <input type="nome" class="textoLogin" placeholder="Nome Completo" required>
+            <input type="email" class="textoLogin" placeholder="Email" required>
+            <input type="senha" class="textoLogin" placeholder="Senha" required>
+            <button type="submit" class="botaoLogin">Cadastrar</button>
         </form>
         <div>
-            <a href="login.html">Voltar para Login</a>
+            <text>Já tem cadastro? </text><a href="login.html">Ir para Login</a>
         </div>
     </div>
 
