--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/menu.js"></script> 
     <title>Menu Principal</title>
 </head>
 <body>
@@ -13,8 +14,9 @@
     </div>
 	<div>
 		<h2>Cadastro de Veículo</h2>
-        <form>
-            <input placeholder="Placa" required>
+        <form onsubmit="event.preventDefault(); gravarPlaca();">
+            <input id="placa" placeholder="Placa" required>
+            <input id="usuario_id" type="hidden" value="1"> <!--Fazer user_id dinamico depois-->
             <button type="submit">Cadastrar</button>
         </form>
 	</div>
