Início do desenvolvimento do sistema de saldo
Implementação do envio de saldo por parte do usuário

--- a/totem/totem.html
+++ b/totem/totem.html
@@ -35,8 +35,10 @@
         <button id="cancelarQR" onclick="cancelarQr()">Cancelar</button>
     </div>
     <div class="telaConfirmacao" style="display: none;">
+        <h2>Nota fiscal gerada (a tela reiniciará automaticamente)</h2>
         <h2 id="confirmacao" style="display: none; color: green;">Pagamento confirmado!</h2>
         <h2 id="erro" style="display: none;color:red;">Erro no pagamento, tente novamente!</h2>
+        <div class="Nota Fiscal"></div>
     </div>
 
 </body>
