--- a/index.html
+++ b/index.html
@@ -3,32 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/menu.js"></script> 
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="js/menu.js" defer></script> 
     <title>Menu Principal</title>
 </head>
 <body>
-
-    <div>
-        <h1>Bem-vindo ao VagaXpress</h1>
-        
+    <div class="menu_lateral">
+        <div id="tela1" class="abas_menu_lateral" onclick="abrirTela(event)">Página Inicial</div>
+        <div id="tela2" class="abas_menu_lateral" onclick="abrirTela(event)">Cadastro de veículos</div>
+        <div id="tela3" class="abas_menu_lateral" onclick="abrirTela(event)">Agendamento</div>
+        <div id="tela4" class="abas_menu_lateral" onclick="abrirTela(event)">Perfil do UsuárioSuporte</div>
+        <div id="tela5" class="abas_menu_lateral" onclick="abrirTela(event)">Suporte</div>
     </div>
-	<div>
-		<h2>Cadastro de Veículo</h2>
-        <form onsubmit="event.preventDefault(); gravarPlaca();">
-            <input id="placa" placeholder="Placa" required>
-            <input id="usuario_id" type="hidden" value="1"> <!--Fazer user_id dinamico depois-->
-            <button type="submit">Cadastrar</button>
-        </form>
-	</div>
-	<div>
-		<h2>Agendamento de Estacionamento</h2>
-        <form>
-            <input placeholder="Placa" required>
-			<input placeholder="Data Agendamento" required>
-			<input placeholder="Hora Agendamento" required>
-            <button type="submit">Agendar</button>
-        </form>
-	</div>
 
+    <div id="conteudo">
+        <h1>Bem-vindo ao VagaXpress</h1>
+    </div>
 </body>
 </html>
