Correção na criação do menu lateral

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="menu_lateral">
-        <div id="tela1" class="abas_menu_lateral" onclick="abrirTela(event)">Página Inicial</div>
-        <div id="tela2" class="abas_menu_lateral" onclick="abrirTela(event)">Cadastro de veículos</div>
-        <div id="tela3" class="abas_menu_lateral" onclick="abrirTela(event)">Agendamento</div>
-        <div id="tela4" class="abas_menu_lateral" onclick="abrirTela(event)">Perfil do UsuárioSuporte</div>
-        <div id="tela5" class="abas_menu_lateral" onclick="abrirTela(event)">Suporte</div>
+        <div id="tela_inicial" class="abas_menu_lateral" onclick="abrirTela(event)">Página Inicial</div>
+        <div id="cadastro_veiculos" class="abas_menu_lateral" onclick="abrirTela(event)">Cadastro de veículos</div>
+        <div id="agendamento" class="abas_menu_lateral" onclick="abrirTela(event)">Agendamento</div>
+        <div id="perfil_usuario" class="abas_menu_lateral" onclick="abrirTela(event)">Perfil do Usuário</div>
+        <div id="suporte" class="abas_menu_lateral" onclick="abrirTela(event)">Suporte</div>
     </div>
 
     <div id="conteudo">
