Criação da visualização de notificações

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="cadastro_veiculos" class="abas_menu_lateral" onclick="abrirTela(event)">Cadastro de veículos</div>
         <div id="agendamento" class="abas_menu_lateral" onclick="abrirTela(event)">Agendamento</div>
         <div id="perfil_usuario" class="abas_menu_lateral" onclick="abrirTela(event)">Perfil do Usuário</div>
+        <div id="notificacao" class="abas_menu_lateral" onclick="abrirTela(event)">Notificação</div>
         <div id="suporte" class="abas_menu_lateral" onclick="abrirTela(event)">Suporte</div>
     </div>
 
