--- a/objetosProjeto/mvc/index.html
+++ b/objetosProjeto/mvc/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="view/css/index.css">
-    <script src="/view/js/menu.js" defer></script> 
+    <script src="view/js/menu.js" defer></script> 
     <title>Menu Principal</title>
 </head>
 <body>
@@ -15,6 +15,8 @@
         <div id="perfil_usuario" class="abas_menu_lateral" onclick="abrirTela(event)">Perfil do Usuário</div>
         <div id="notificacao" class="abas_menu_lateral" onclick="abrirTela(event)">Notificação</div>
         <div id="suporte" class="abas_menu_lateral" onclick="abrirTela(event)">Suporte</div>
+        <div id="login" class="abas_menu_lateral" onclick="abrirTela(event)">Login</div>
+        <div id="logout" class="abas_menu_lateral" onclick="abrirTela(event)">Logout</div>
     </div>
 
     <div id="conteudo">
