--- a/objetosProjeto/mvc/index.html
+++ b/objetosProjeto/mvc/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="view/css/index.css">
+    <script src="view/js/crypto-js.min.js"></script>
+    <script src="view/js/openpgp.min.js"></script>
     <script src="view/js/menu.js" defer></script> 
     <title>Menu Principal</title>
 </head>
