Desenvolvimento página pagamento
Remoção de funções não utilizadas e desenvolvimento página pagamento

--- a/objetosProjeto/mvc/index.html
+++ b/objetosProjeto/mvc/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="menu_lateral">
         <div id="tela_inicial" class="abas_menu_lateral" onclick="abrirTela(event)">Página Inicial</div>
-        <div id="cadastro_veiculos" class="abas_menu_lateral" onclick="abrirTela(event)">Cadastro de veículos</div>
-        <div id="agendamento" class="abas_menu_lateral" onclick="abrirTela(event)">Agendamento</div>
+        <div id="cadastro_veiculos" class="abas_menu_lateral" onclick="abrirTela(event)">Cadastro de Veículos</div>
+        <div id="agendamento" class="abas_menu_lateral" onclick="abrirTela(event)">Agendamento e Pagamento</div>
         <div id="perfil_usuario" class="abas_menu_lateral" onclick="abrirTela(event)">Perfil do Usuário</div>
         <div id="notificacao" class="abas_menu_lateral" onclick="abrirTela(event)">Notificação</div>
         <div id="suporte" class="abas_menu_lateral" onclick="abrirTela(event)">Suporte</div>
