--- a/app/front/index.html
+++ b/app/front/index.html
@@ -16,6 +16,7 @@
         <div id="perfil_usuario" class="abas_menu_lateral" onclick="abrirTela(event)">Perfil do Usuário</div>
         <div id="notificacao" class="abas_menu_lateral" onclick="abrirTela(event)">Notificação</div>
         <div id="suporte" class="abas_menu_lateral" onclick="abrirTela(event)">Suporte</div>
+        <div id="chat" class="abas_menu_lateral" onclick="abrirTela(event)">Chat</div>
         <div id="login" class="abas_menu_lateral" onclick="abrirTela(event)">Login</div>
         <div id="logout" class="abas_menu_lateral" onclick="abrirTela(event)">Logout</div>
     </div>
